site/css/style.scss
@import "scssDep/extends";
@import "scssDep/mixins";
@import "scssDep/variables";

* {
  box-sizing: border-box;
}

body {
  margin: 0;
  font-family: "Source Sans Pro", sans-serif;
}

button {
  border: none;
  padding: 0;
  background-color: inherit;
}

h1,
h2,
h3 {
  margin: 0;
}

ul,
li {
  list-style: none;
  padding: 0;
}

p {
  margin: 0;
}
a {
  text-decoration: none;
  color: black;
  display: flex;
  align-items: center;

  &:visited {
    color: black;
  }
}

i {
  font-weight: 400;
}

.banners,
.secondary-nav,
.brands {
  display: none;
}

.container {
  padding: 0;
}

.banners {
  width: $banners_width;
  height: 140px;
  top: 0;
  left: 0;
  position: absolute;
}

.header {
  height: fit-content;
  position: relative;
  top: 0;
  left: 0;
  width: 100vw;
  z-index: 5;
}

.fa-search {
  transform: scale(-1, 1);
}

.main-nav {
  position: fixed;
  width: 100vw;
  height: 50px;
  display: flex;
  justify-content: center;
  gap: 50px;
  font-size: 25px;
  background-color: #f8f8f8;

  .background {
    display: none;
    position: absolute;
    top: 0;
    height: 100%;
    left: calc(-100vw / 2 + $header-width / 2);
    right: calc(-100vw / 2 + $header-width / 2);
    background-color: #f8f8f8;
    z-index: -1;
  }

  &__item {
    width: 50px;
    min-width: 50px;

    &--desk {
      display: none;
    }

    .fa-bars {
      color: #ff5959;
    }
  }

  &__group {
    display: flex;
    justify-content: center;
    width: fit-content;

    .main-nav-group__item {
      flex: 1;
      min-width: 50px;

      &--search {
        background-color: #bbb8b6;
        color: #fff;
      }

      &--cart {
        flex: 2;
        display: flex;
        min-width: 100px;

        .cart__item {
          min-width: 50px;
          flex: 1;
          display: flex;
          justify-content: center;
          align-items: center;
        }

        .cart__item2 {
          background-color: #ff5959;
          font-size: 20px;
          color: #fff;
        }
      }
    }
  }
}

.secondary-header {
  padding-top: 50px;
  width: 100%;
  height: fit-content;
  display: flex;
  justify-content: center;
  align-items: center;

  .header-logo-container {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 150px;

    &__image {
      background-image: url("../../img/logo/logo@276x50.png");
      width: 276px;
      height: 50px;
    }
  }

  .secondary-nav {
    display: none;
    width: 570px;
    height: 100%;
    padding-top: 50px;
    flex-direction: column;

    .secondary-nav__slim {
      min-height: 30px;
      max-height: 30px;
      width: 100%;
      display: flex;
      justify-content: space-between;

      .secondary-nav__slim-item {
        flex: 1;
        margin-right: 5px;
        display: flex;
        padding-left: 5px;
        gap: 5px;
        font-weight: 600;
        font-size: 15px;
        letter-spacing: 1px;
        color: white;

        i {
          font-size: 25px;
          color: black;
        }

        &--search {
          margin-right: 0;
          padding: 0;
          flex: 2;
          display: flex;
          justify-content: flex-end;
          border: 1px solid #bcb8b5;
          gap: 0;

          .secondary-nav__search-input {
            flex: 1;
            border-width: 0;
            padding-left: 10px;
            position: relative;

            &::placeholder {
              color: #d8dbd9;
              font-size: 15px;
            }

            &:focus {
              outline: none;
            }
          }

          .secondary-nav__search-icon {
            background-color: #bcb8b5;
            width: 49px;
            height: 100%;
            display: flex;
            justify-content: center;
            align-items: center;

            i {
              color: white;
              font-size: 20px;
            }
          }
        }

        &--left {
          background-color: #9faa4c;
        }

        &--right {
          background-color: #8e789e;
        }
      }
    }

    .secondary-nav_icons {
      margin-top: 20px;
      height: 100%;
      display: flex;
      justify-content: flex-start;
      align-items: flex-end;
      gap: 5px;

      .secondary-nav__icon {
        height: 100px;
        width: 100px;
        position: relative;
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        background-color: #f2f2f2;

        &--separated {
          position: absolute;
          bottom: 0;
          right: 0;

          background-color: #ff5959;
          h2.secondary-nav__icon-title {
            color: #ff5959;
          }
        }

        .secondary-title__item-image {
          height: 100px;
          width: 100px;
          padding: 10px;

          img {
            height: 80px;
            width: 80px;
          }
        }

        .secondary-nav__icon-title {
          padding-top: 5px;
          font-size: 15px;
          font-weight: 600;
          width: 100%;
          color: #1f2d36;
          background-color: white;
          text-align: center;
        }
      }
    }
  }
}
/* ... */

